# cpu-eater

./: Cargo.toml  README.md
benches/: benchmark.rs
src/: main.rs
