[package]
name = "cpu-eater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
os-id = "*"
ctrlc = "*"
thread_local = "*"
crossbeam = "*"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
